--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,19 +2,19 @@ name: Generate Snake
 
 on:
   schedule:
-    - cron: "0 0 * * *"  # runs every day
+    - cron: "0 0 * * *" # every day at midnight
   workflow_dispatch:
 
 jobs:
-  build:
+  generate:
     runs-on: ubuntu-latest
     steps:
-      - name: Generate GitHub snake
-        uses: Platane/snk@v3
+      - uses: Platane/snk@v3
         with:
           github_user_name: akash7i
           outputs: |
-            dist/github-contribution-grid-snake.svg
+            ./dist/github-contribution-grid-snake.svg
+            ./dist/github-contribution-grid-snake-dark.svg?palette=github-dark
 
       - name: Push to GitHub
         uses: crazy-max/ghaction-github-pages@v3
