--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,22 +1,21 @@
 name: Generate Snake
 
 on:
-  schedule:
-    - cron: "0 0 * * *" # every day at midnight
   workflow_dispatch:
 
 jobs:
   generate:
     runs-on: ubuntu-latest
-    steps:
-      - uses: Platane/snk@v3
-        with:
-          github_user_name: akash7i
-          outputs: |
-            ./dist/github-contribution-grid-snake.svg
-            ./dist/github-contribution-grid-snake-dark.svg?palette=github-dark
 
-      - name: Push to GitHub
+    steps:
+      - name: Generate Snake SVG
+        uses: Platane/snk@v3
+        with:
+          github_user_name: Akash7i
+          outputs: |
+            dist/github-contribution-grid-snake.svg
+
+      - name: Push to GitHub Pages
         uses: crazy-max/ghaction-github-pages@v3
         with:
           target_branch: output
