--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -15,6 +15,9 @@ jobs:
           outputs: |
             dist/github-contribution-grid-snake.svg
 
+      - name: Show output folder
+        run: ls -R dist
+
       - name: Push to GitHub Pages
         uses: crazy-max/ghaction-github-pages@v3
         with:
