--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -8,6 +8,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
       - name: Generate Snake SVG
         uses: Platane/snk@v3
         with:
