--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,7 +2,7 @@ name: Generate Snake
 
 on:
   schedule:
-    - cron: "0 0 * * *"  # every day at midnight
+    - cron: "0 0 * * *" # Runs daily at midnight
   workflow_dispatch:
 
 jobs:
@@ -15,10 +15,10 @@ jobs:
         with:
           github_user_name: akash7i
           outputs: |
-            dist/github-contribution-grid-snake.svg
-          color_snake: "#00ffff"         # neon blue snake
-          color_dots: "#000000"  # background dots
-          background_color: "#00000000"  # transparent
+            dist/snake.svg
+          color_snake: "#00ffff"                # Neon cyan snake
+          color_dots: "#cccccc,#e0e0e0"         # Light grey & off-white dots
+          background_color: "#00000000"         # Transparent background
 
       - name: Show output folder
         run: ls -R dist
